--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
+    "flowbite-react": "^0.7.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
