--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3"
   },
